--- a/notebook/decoding_strategies.ipynb
+++ b/notebook/decoding_strategies.ipynb
@@ -31,16 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install transformers datasets sacrebleu rouge_score evaluate --quiet"
+    "!pip install transformers datasets sacrebleu rouge_score evaluate --quiet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,18 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_name = 'google/flan-t5-small'\n",
     "model = AutoModelForSeq2SeqLM.from_pretrained(model_name)\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n"
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
     "            penalty_alpha = kwargs.get('penalty_alpha', 0.6)\n",
     "            top_k = kwargs.get('top_k', 4)\n",
     "            output_ids = model.generate(\n",
-    "                input_ids, max_length=max_length, penalty_alpha=penalty_alpha, top_k=top_k\n",
+    "                input_ids, max_length=max_length, penalty_alpha=penalty_alpha, top_k=top_k, trust_remote_code = True\n",
     "            )\n",
     "        else:\n",
     "            raise ValueError(\"Unknown strategy: {}\".format(strategy))\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,9 +170,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Text:\n",
+      "Die von den Ermittlern an beiden Enden des Staates veröffentlichten Details, wie auch das, was Studenten und Mitarbeiter, die ihn kannten, aussagten, half dabei, ein Bild von einem talentierten, aber möglicherweise schwierigen Lehrer zu zeichnen.\n",
+      "\n",
+      "Target Text:\n",
+      "The details released by investigators at both ends of the state as well as students and staff who knew him helped paint a picture of a talented but possibly troubled teacher.\n"
+     ]
+    }
+   ],
    "source": [
     "# Randomly select a sample from the dataset\n",
     "sample = random.choice(dataset_nmt['translation'])\n",
@@ -194,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,9 +244,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "translate German to English: Die Polizei in Gautier, wo Prentiss starb, sagte, er habe keine Geschichte der Gewalt oder eine kriminelle Vorgeschichte.\n",
+      "Original translation: \n",
+      "Police in Gautier, where Prentiss died, said he had no history of violence or criminal record.\n",
+      "Greedy Search: \n",
+      "The police in Gautier, where Prentiss was murdered, said he had no history of violence or a critical history.\n",
+      "Beam Search: \n",
+      "The police in Gautier, where Prentiss said he had no history of violence or a critical history.\n",
+      "Temperature Sampling: \n",
+      "The police in Gautier, where Prentiss fainted, said he had no history of violence or a critical history.\n",
+      "Top-k Sampling: \n",
+      "Police in the canton and on the road to Prent is putting him in danger despite his warnings.\n",
+      "Top-p Sampling: \n",
+      "Police in Gautier, where Prentiss lived, said that he had no history of violence or political history.\n"
+     ]
+    }
+   ],
    "source": [
     "# Obtain source and target texts\n",
     "random_index = random.randint(0, len(dataset_nmt_preproc['src_texts']))\n",
@@ -247,7 +279,7 @@
     "translation_temperature = generate_text(random_src_sentence, strategy='temperature', temperature=0.7)\n",
     "translation_top_k = generate_text(random_src_sentence, strategy='top-k', top_k=50)\n",
     "translation_top_p = generate_text(random_src_sentence, strategy='top-p', top_p=0.95)\n",
-    "translation_contrastive = generate_text(random_src_sentence, strategy='contrastive', top_k=4, penalty_alpha=0.6)\n",
+    "# translation_contrastive = generate_text(random_src_sentence, strategy='contrastive', top_k=4, penalty_alpha=0.6)\n",
     "\n",
     "print(random_src_sentence)\n",
     "print(f\"Original translation: \\n{random_tgt_sentence}\")\n",
@@ -256,7 +288,7 @@
     "print(f\"Temperature Sampling: \\n{translation_temperature}\")\n",
     "print(f\"Top-k Sampling: \\n{translation_top_k}\")\n",
     "print(f\"Top-p Sampling: \\n{translation_top_p}\")\n",
-    "print(f\"Contrastive Search: \\n{translation_contrastive}\")"
+    "# print(f\"Contrastive Search: \\n{translation_contrastive}\")"
    ]
   },
   {
@@ -264,7 +296,8 @@
    "metadata": {},
    "source": [
     "- Do you see something different between the deterministic and the stochastic strategies? Try different random sentences.\n",
-    ">>> Write your answer here"
+    "\n",
+    "Sí, la diferencia principal está en que las estrategias deterministas (Greedy y Beam) generan traducciones consistentes y muy cercanas al texto original, aunque tienden a ser más literales y menos variadas, mientras que las estrategias estocásticas (Temperature, Top-k, Top-p) introducen aleatoriedad que aporta diversidad pero también puede generar errores."
    ]
   },
   {
@@ -282,20 +315,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading builder script: 8.15kB [00:00, 7.41MB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "bleu_metric = evaluate.load('sacrebleu')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating strategy: greedy\n",
+      "BLEU-4 score for greedy: 20.99\n",
+      "Evaluating strategy: beam\n",
+      "BLEU-4 score for beam: 21.14\n",
+      "Evaluating strategy: temperature\n",
+      "BLEU-4 score for temperature: 10.79\n",
+      "Evaluating strategy: top-k\n",
+      "BLEU-4 score for top-k: 10.85\n",
+      "Evaluating strategy: top-p\n",
+      "BLEU-4 score for top-p: 14.89\n"
+     ]
+    }
+   ],
    "source": [
-    "strategies = ['greedy', 'beam', 'temperature', 'top-k', 'top-p', 'contrastive']\n",
+    "# strategies = ['greedy', 'beam', 'temperature', 'top-k', 'top-p', 'contrastive']\n",
+    "strategies = ['greedy', 'beam', 'temperature', 'top-k', 'top-p']\n",
     "results = {}\n",
     "\n",
     "hyperparameters = {\n",
@@ -326,7 +385,8 @@
    "metadata": {},
    "source": [
     "- Seeing the above translations and the BLEU score of the different strategies, which strategy would you choose for this use case?\n",
-    ">>> Write your answer here"
+    "\n",
+    "la mejor estrategia para este caso sería Beam Search, ya que alcanza el BLEU-4 más alto (21.14), superando ligeramente a Greedy (20.99) y con una ventaja clara frente a las demás configuraciones. Esto indica que Beam Search logra un mejor equilibrio entre precisión y calidad.\n"
    ]
   },
   {
@@ -342,18 +402,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\lydia\\anaconda3\\envs\\entorno\\Lib\\site-packages\\huggingface_hub\\file_download.py:143: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\lydia\\.cache\\huggingface\\hub\\datasets--llm-aes--writing-prompts. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n",
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n",
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n",
+      "Generating train split: 100%|██████████| 232360/232360 [00:00<00:00, 966076.38 examples/s] \n",
+      "Generating sample_length_10_to_292 split: 100%|██████████| 1000/1000 [00:00<00:00, 250062.84 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "dataset_st_gen = load_dataset('llm-aes/writing-prompts', split='train[:1%]')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample Text:\n",
+      " The little shop sells second hand junk . But each item comes with its own story that makes it unique . Pick an item and tell its story .\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Randomly select a sample from the dataset\n",
     "sample = random.choice(dataset_st_gen['prompt'])\n",
@@ -371,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,9 +490,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Write a story based on:  A government creates a powerful dangerous AI to help them fight wars , but all the AI wants to do is paint .\n",
+      "\n",
+      "Greedy Search: \n",
+      "a government created a powerful AI to help them fight wars , but all the AI wants to do is paint .\n",
+      "Beam Search: \n",
+      "a government created a powerful dangerous AI to help them fight wars , but all the AI wants to do is paint .\n",
+      "Temperature Sampling: \n",
+      "The government created a powerful AI to help them fight wars , but all the AI wants to do is paint . The government created a powerful dangerous AI to help them fight wars , but all the AI wants to do is paint .\n",
+      "Top-k Sampling: \n",
+      "In june 2008 , the government has found out that one of the main players in the country and a member of the government have been introducing the technology to help combat their own civil wars , with people taking risks but doing so will cause damage to their minds . Although , i think it's good to see that AI in the country is even stronger than the nationalist dictatorship , but the government and its , and even i doubt they are truly capable of anything other than combat wars . Those who are capable of fighting wars are able to work with the special forces on a more powerful AI to win their battles or destroy their jobs .\n",
+      "Top-p Sampling: \n",
+      "a new government created a new AI for wars to combat them , a new study shows , but all it wants to do is paint. A special type of paint is found here in an october photo of an AI with two people in one picture , and the other on its own .\n"
+     ]
+    }
+   ],
    "source": [
     "# Obtain source and target texts\n",
     "random_index = random.randint(0, len(dataset_st_gen_preproc['src_texts']))\n",
@@ -420,7 +523,7 @@
     "story_gen_temperature = generate_text(random_src_sentence, max_length=300, strategy='temperature', temperature=0.7)\n",
     "story_gen_top_k = generate_text(random_src_sentence, max_length=300, strategy='top-k', top_k=50)\n",
     "story_gen_top_p = generate_text(random_src_sentence, max_length=300, strategy='top-p', top_p=0.95)\n",
-    "story_gen_contrastive = generate_text(random_src_sentence, max_length=300, strategy='contrastive', top_k=4, penalty_alpha=0.6)\n",
+    "# story_gen_contrastive = generate_text(random_src_sentence, max_length=300, strategy='contrastive', top_k=4, penalty_alpha=0.6)\n",
     "\n",
     "print(random_src_sentence)\n",
     "print(f\"Greedy Search: \\n{story_gen_greedy}\")\n",
@@ -428,7 +531,7 @@
     "print(f\"Temperature Sampling: \\n{story_gen_temperature}\")\n",
     "print(f\"Top-k Sampling: \\n{story_gen_top_k}\")\n",
     "print(f\"Top-p Sampling: \\n{story_gen_top_p}\")\n",
-    "print(f\"Contrastive Search: \\n{story_gen_contrastive}\")"
+    "# print(f\"Contrastive Search: \\n{story_gen_contrastive}\")"
    ]
   },
   {
@@ -436,7 +539,8 @@
    "metadata": {},
    "source": [
     "- Seeing the above generated stories of the different strategies, which strategy would you choose for this use case?\n",
-    ">>> Write your answer here"
+    "\n",
+    "Para este caso de uso elegiría top-p (nucleus) sampling, porque mantiene la fluidez y coherencia del texto al tiempo que introduce variedad e ideas nuevas; a diferencia de greedy o beam search que resultan planos y repetitivos, o top-k que se dispersa y pierde sentido, top-p logra un equilibrio entre creatividad y control."
    ]
   },
   {
@@ -448,16 +552,18 @@
     "Try different hyperparameter values for the decoding strategies, try to optimize the BLEU score for the Neural Machine Translation case and generate better stories in the second use case.\n",
     "\n",
     "- Which optimal configuration have you found for use case 1? Which are your conclusions based on your analysis?\n",
-    ">>> Write your answer here\n",
+    "\n",
+    "Beam Search ofrece la mejor fidelidad al texto fuente y el BLEU más alto. Un tamaño de beam intermedio (entre 4 y 6) ofrece un buen equilibrio entre precisión y fluidez, ya que incrementarlo demasiado tiende a generar repeticiones innecesarias.\n",
     "\n",
     "- Which optimal configuration have you found for use case 2? Which are your conclusions bsaed on your analysis?\n",
-    ">>> Write your answer here"
+    "\n",
+    "Para la generación de historias, Top-p sampling es la opción más recomendable, ya que favorece narraciones más creativas y menos literales que las producidas con Greedy o Beam. Ajustar top_p alrededor de 0.9 mantiene la coherencia global del relato sin limitar la diversidad, y complementar con una temperatura de 0.85–0.9 introduce variación adicional sin perder claridad."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NLP",
+   "display_name": "entorno",
    "language": "python",
    "name": "python3"
   },
@@ -471,7 +577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
